correct footer on mobile

--- a/src/App.scss
+++ b/src/App.scss
@@ -22,7 +22,7 @@ body{
     background-position: center; /* Center the image */
     background-repeat: repeat; /* Do not repeat the image */
     background-size: cover; /* Resize the background image to cover the entire container */
-    
+    width: fit-content;
   }
 
 }
