--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -1,11 +1,20 @@
-#footer{
+#footer {
+  display: flex;
+  align-items: center;
+  background-color: #ebebeb11;
+  img {
+    height: 60px;
+    border-radius: 2px;
+    margin: 20px;
+    background-color: white;
+  }
+}
+
+@media only screen and (max-width: 600px) {
+  #footer {
     display: flex;
     align-items: center;
+    justify-content: space-evenly;
     background-color: #ebebeb11;
-    img{
-        height: 60px;
-        border-radius: 2px;
-        margin: 20px;
-        background-color: white;
-    }
+  }
 }
