--- a/src/index.scss
+++ b/src/index.scss
@@ -5,7 +5,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  width: 98vw;
+  width: 100vw;
   user-select: none;
 }
 
@@ -14,5 +14,11 @@ code {
     monospace;
 }
 #root {
+ 
   width: 100vw;
+}
+
+html{
+  display: flex;
+  justify-content: center;
 }
